Mise à jour d'ajout du responsive design avec Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="images/PASSEPORT LUCIEN.jpg">
+    <link rel="icon" type="image/png" href="images/icons/icone.png">
     <script
         src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <title>Portfolio Lucien Kanani</title>
