Mise à jour d'ajout du responsive design avec Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div name="Skills" class="mt-10 mb-8">
                     <h1 class="text-4xl md:text-5xl text-center font-bold">Skills</h1>
                     <div name="Skills-grid" class="mt-6">
-                        <ul class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-4 text-lg">
+                        <ul class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-4 gap-4 text-lg">
                             <li class="p-4 bg-orange-200 text-black flex item-center gap-2 rounded">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"
                                     class="text-3xl">
