--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <title>Portfolio Lucien Kanani</title>
 </head>
 
-<body class="flex flex-col bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-white max-w-screen-xl m-auto p-2 transition-colors duration-900">
-    <header class="flex justify-between py-8 items-center">
-        <h1 class="text-3xl font-bold text-orange-600 dark:text-orange-100">LKanan</h1>
+<body class="flex flex-col bg-slate-100 text-slate-900 dark:bg-slate-900 dark:text-white max-w-screen-xl m-auto p-2 transition-colors duration-900">
+    <header class="fixed top-2 left-1/2 transform -translate-x-1/2 z-40 w-[95%] max-w-screen-xl flex justify-between py-2 px-6 items-center bg-white/30 dark:bg-slate-900/30 backdrop-blur-md rounded-full shadow-xl border border-white/20 dark:border-slate-700 transition-colors duration-900 mt-2">
+        <a href="#"><h1 class="text-3xl font-bold text-orange-600 dark:text-orange-100">LKanan</h1></a>
         <div class="flex items-center gap-4">
             <nav class="hidden md:flex">
                 <ul class="flex gap-x-4 font-medium justify-center items-center">
@@ -56,7 +56,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="pt-28">
         <section name="Home" id="home"
             class="flex flex-col py-12 md:py-36 md:flex-row-reverse bg-gradient-to-r from-slate-100 to-slate-200 dark:from-slate-900 dark:to-slate-700 m-auto justify-center gap-x-48 rounded-ee-3xl transition-colors duration-900">
             <div class="flex flex-col items-center">
@@ -383,7 +383,7 @@
         class="md:flex items-center justify-center border-t bg-gradient-to-t from-slate-100 to-slate-200 dark:from-slate-900 dark:to-slate-700 md:px-24 md:py-16 transition-colors duration-900">
         <h1
             class="flex items-center justify-center text-3xl font-bold text-orange-600 dark:text-orange-100 h-24 pr-4  md:border-r border-orange-600 dark:border-orange-100">
-            LKanan.dev</h1>
+            LKanan</h1>
         <div class="flex flex-col-reverse md:flex-row md:justify-between md:justify-center w-full">
             <div class="md:pl-6 flex flex-col items-center md:items-start">
                 <ul class="flex gap-x-4">
